<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/loginLayout">

    <ImageView
        android:id="@+id/imagen_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo02"
        android:transitionName="logo_trans"/>

    <TextView
        android:id="@+id/texto01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto02"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:transitionName="texto_trans"/>

    <TextView
        android:id="@+id/texto02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto03"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Correo Electronico"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Contraseña"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_olvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:text="@string/texto04"
        android:textSize="12sp"
        android:textColor="#777"
        android:background="#00000000"/>

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto05" />
    
    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto11"
        android:textAlignment="textStart"
        android:drawableLeft="@mipmap/google"
        android:textColor="@color/black"
        android:background="#00000000"
        android:layout_margin="9dp"
        />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto06"
        android:textColor="#E91E63"
        android:background="#00000000"/>
</LinearLayout>